# Rust-and-C-Interoperability-Practical-Guide

./: .gitignore  Cargo.toml  README-zh_CN.md  README.md  build.rs  build_lib_and_run copy.sh  build_lib_and_run.ps1
external_build/src_lib/lib_build/: dylib_for_rust.exp  static_for_rust.lib
external_lib/: CMakeLists.txt  build.ps1  dylib.c
src_lib/: CMakeLists.txt  build.ps1
